@@ -4,6 +4,7 @@ import android.content.Context;
 import android.content.Intent;
 import android.net.Uri;
 import android.util.AttributeSet;
+import android.webkit.WebResourceError;
 import android.webkit.WebResourceRequest;
 import android.webkit.WebResourceResponse;
 import android.webkit.WebSettings;
@@ -13,13 +14,12 @@ import android.webkit.WebViewClient;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import java.util.Map;
 
 import cn.authing.guard.activity.AuthActivity;
 import cn.authing.guard.analyze.Analyzer;
-import cn.authing.guard.data.Config;
 import cn.authing.guard.data.UserInfo;
 import cn.authing.guard.flow.AuthFlow;
 import cn.authing.guard.network.AuthRequest;
@@ -71,7 +71,7 @@ public class WebAuthView extends WebView {
             @Override
             public boolean shouldOverrideUrlLoading(WebView view, WebResourceRequest request) {
                 String url = request.getUrl().toString();
-//                ALog.d(TAG, "shouldOverrideUrlLoading:" + url);
+                ALog.d(TAG, "shouldOverrideUrlLoading:" + url);
 
                 Uri uri = Uri.parse(url);
                 String uuid = Util.getQueryParam(url, "uuid");
@@ -113,16 +113,26 @@ public class WebAuthView extends WebView {
 //                ALog.d(TAG, "onLoadResource:" + url);
             }
 
+            public void onReceivedError(WebView view, WebResourceRequest request, WebResourceError error) {
+//                ALog.e(TAG, "onReceivedError:" + request.getUrl());
+                handleAuthCode(request.getUrl().toString());
+            }
+
             @Override
             public void onReceivedHttpError(WebView view, WebResourceRequest request, WebResourceResponse errorResponse) {
                 super.onReceivedHttpError(view, request, errorResponse);
 //                ALog.e(TAG, "onReceivedHttpError:" + request.getUrl());
-                String url = request.getUrl().toString();
                 if (errorResponse.getStatusCode() == 400) {
                     if (listener != null) {
                         listener.onLoaded();
                     }
-                } else if (url.startsWith(authRequest.getRedirectURL())) {
+                } else {
+                    handleAuthCode(request.getUrl().toString());
+                }
+            }
+
+            private void handleAuthCode(String url) {
+                if (url.startsWith(authRequest.getRedirectURL())) {
                     try {
                         String authCode = Util.getAuthCode(url);
                         if (authCode != null) {
@@ -144,7 +154,7 @@ public class WebAuthView extends WebView {
                 ALog.d(TAG, "onPageFinished:" + url);
                 if (listener != null && "login".equals(Uri.parse(url).getLastPathSegment())) {
                     try {
-                        URL u = new URL(url);
+                        URI u = new URI(url);
                         Map<String, List<String>> map = Util.splitQuery(u);
                         if (map.containsKey("uuid")) {
                             if (count == 1) {
@@ -214,6 +224,7 @@ public class WebAuthView extends WebView {
         String js = "(function f(){\n" +
             "var url = \"" + url + "\";\n" +
             "var xhr = new XMLHttpRequest();\n" +
+            "console.log('executing skipping js');\n" +
             "xhr.onload = function() {\n" +
             "   console.log('status=' + xhr.status + ' responseURL=' + xhr.responseURL);" +
             "   if(xhr.status === 200) {\n" +
@@ -225,5 +236,9 @@ public class WebAuthView extends WebView {
             "xhr.send(\"" + body + "\");\n" +
         "})()";
         evaluateJavascript(js, null);
+    }
+
+    public AuthRequest getAuthRequest() {
+        return authRequest;
     }
 }
